@@ -11,7 +11,9 @@
         <setting id="sorting" type="select" label="30220" lvalues="30221|30222|30223|30224" default="1"/>
 		<setting id="cache" label="30003" type="bool" default="true"/>
 		<setting id="queries" label="30228" type="bool" default="true"/>
-		<setting id="timeout" type="slider" label="30226" default="30" range="10,10,120" option="int"/>
+		<setting id="timeout" type="slider" label="30226" default="30" range="10,10,240" option="int"/>
+		<setting id="download_timeout" type="slider" label="30230" default="30" range="10,10,240" option="int"/>
+		<setting id="sync_probability" type="slider" label="30231" default="75" range="50,5,100" option="int"/>
 		<setting id="keep_subs" label="30004" type="bool" default="false"/>
 		<setting id="keep_zips" label="30006" type="bool" default="false"/>
 		<setting id="extract" label="30012" type="bool" default="true" visible="eq(-1,true) + eq(-2,true)"/>
@@ -25,6 +27,5 @@
 	</category>
 	<category label="30216">
 		<setting visible="true" label="30217" type="action" action="RunScript(special://home/addons/service.subtitles.subtitles.gr/resources/lib/clear_cache.py)"/>
-<!--		<setting visible="true" label="30217" type="action" action="RunScript(special://home/addons/service.subtitles.subtitles.gr/resources/lib/clear_cache.py)"/>-->
 	</category>
 </settings>
